syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.jonathan.unary_grpc_server.proto";

// Message representing a client's account balance request
message AccountRequest {
  string account_number = 1;
}

// Message representing a server's response to a client's account balance request
message AccountBalanceResponse {
  string account_number = 1;
  double balance = 2;
}

// Service for retrieving account balance
service AccountBalanceService {
  rpc GetAccountBalance (AccountRequest) returns (AccountBalanceResponse) {}
}
